# churnvision_web_1_0

./: .cursorrules  .env.production.example  .gitignore  Claude.md  DEPLOYMENT.md  Dockerfile  FILE_DECISIONS.md  Makefile  PROD_READINESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  generate_license.py  project_info.md
backend/: .env  .env.example  Dockerfile  README.md  create_user.py  entrypoint.sh  pyproject.toml
backend/.churnvision/: installation.id
backend/alembic/: env.py
backend/alembic/versions/: 001_add_chatbot_tables.py  002_add_churnvision_complete_schema.py  003_add_rbac_auth_system.py  004_add_audit_logging.py  005_persist_projects_and_dataset_paths.py  006_model_registry_and_artifacts.py  007_extend_rag_subsystem.py  008_remove_rag_user_fk_constraints.py  009_update_rbac_roles.py  010_add_sso_fields.py  011_add_sso_config_table.py  012_add_performance_indexes.py  013_add_company_context_fields.py  014_add_refresh_tokens.py  015_add_gdpr_compliance_tables.py  016_add_hrcode_lookup_indexes.py  017_add_app_settings_table.py  018_add_model_routing_tables.py  019_add_hris_connectors_behavioral_signals.py  020_add_license_sync_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  helpers.py
backend/app/api/v1/: __init__.py  actions.py  admin.py  agent_memory.py  ai.py  atlas.py  auth.py  chatbot.py  churn.py  connectors.py  data_management.py  employees.py  gdpr.py  intelligent_chat.py  license.py  model_monitoring.py  playground.py  projects.py  rag.py  reasoning.py  recommendations.py  settings.py  sso_admin.py
backend/app/connectors/: __init__.py  bamboohr.py  base.py  slack_metadata.py  teams_metadata.py
backend/app/core/: artifact_crypto.py  audit.py  cache.py  config.py  csrf.py  data_retention.py  encryption.py  hardware_fingerprint.py  installation.py  integrity.py  license.py  license_middleware.py  logging_config.py  login_tracker.py  rate_limiter.py  security.py  security_utils.py  shutdown.py  token_blacklist.py  version.py
backend/app/core/sso/: __init__.py  config.py  oidc.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: agent_memory.py  app_settings.py  auth.py  behavioral_signals.py  chatbot.py  churn.py  dataset.py  employee.py  gdpr.py  hr_data.py  license_sync.py  monitoring.py  project.py  rag.py  refresh_token.py  sso_config.py  treatment.py  user.py
backend/app/schemas/: admin.py  atlas.py  chatbot.py  churn.py  data_management.py  gdpr.py  playground.py  rag.py  roi_dashboard.py  token.py  user.py
backend/app/services/: __init__.py  action_generation_service.py  admin_panel_client.py  app_settings_service.py  atlas_scenario_service.py  behavioral_stage_service.py  business_rule_service.py  cached_queries_service.py  chatbot.py  chatbot_service.py  churn_prediction.py  churn_prediction_service.py  churn_reasoning_orchestrator.py  counterfactual_atlas_service.py  data_quality_service.py  dataset_profiler_service.py  dataset_service.py  document_processor.py  eltv_service.py  ensemble_service.py  intelligent_chatbot.py  interview_insight_service.py  license_sync_service.py  llm_config.py  model_drift_service.py  model_intelligence_service.py  model_router_service.py  outcome_tracking_service.py  peer_statistics_service.py  pii_masking_service.py  rag_service.py  recommendation_service.py  risk_alert_service.py  risk_threshold_service.py  roi_dashboard_service.py  survival_analysis_service.py  treatment_generation_service.py  treatment_mapping_service.py  treatment_service.py  vector_store.py  (+1 more)
backend/app/services/ai/: __init__.py  action_generation_service.py  base_generation_service.py  chatbot_service.py  intelligent_chatbot.py  llm_config.py  rag_service.py  treatment_generation_service.py  vector_store_service.py
backend/app/services/analytics/: __init__.py  behavioral_stage_service.py  data_driven_thresholds_service.py  eltv_service.py  peer_statistics_service.py  recommendation_service.py  risk_alert_service.py
backend/app/services/compliance/: __init__.py  admin_panel_client.py  gdpr_service.py  license_sync_service.py  pii_masking_service.py
backend/app/services/data/: __init__.py  cached_queries_service.py  dataset_service.py  project_service.py
backend/app/services/ml/: __init__.py  churn_prediction_service.py  dataset_profiler_service.py  ensemble_service.py  model_intelligence_service.py  model_router_service.py  survival_analysis_service.py  tabpfn_service.py
backend/app/services/reasoning/: __init__.py  churn_reasoning_orchestrator.py
backend/app/services/settings/: __init__.py  app_settings_service.py
backend/app/services/tools/: __init__.py  agent.py  aggregation_tools.py  employee_tools.py  executor.py  flexible_query.py  provider_adapter.py  registry.py  (+1 more)
backend/data/sample_datasets/: employees_1000.csv  employees_10000.csv  employees_200.csv  employees_500.csv  generate_datasets.py
backend/models/: churn_model.pkl  encoders.pkl  scaler.pkl
backend/scripts/: generate_integrity_manifest.py  generate_license.py
backend/tests/: __init__.py  conftest.py  playground_test_report.md  test_api_admin.py  test_api_ai.py  test_api_atlas.py  test_api_auth.py  test_api_chatbot.py  test_api_churn.py  test_api_connectors.py  test_api_data_management.py  test_api_employees.py  test_api_gdpr.py  test_api_intelligent_chat.py  test_api_license.py  test_api_model_monitoring.py  test_api_projects.py  test_api_rag.py  test_api_recommendations.py  test_api_settings.py  test_api_sso_admin.py  test_churn_prediction_service.py  test_churn_service.py  test_core_audit.py  test_core_audit_extended.py  test_core_config.py  test_core_security.py  test_core_security_extended.py  test_health_checks.py  test_intelligent_chatbot_comprehensive.py  test_login_tracker.py  test_main.py  test_pii_masking.py  test_playground_api.py  test_rate_limiter.py  test_refresh_tokens.py  test_services_churn_prediction.py  test_treatment_generation.py
backend/tests/reports/: chatbot_test_report.md
backend/tests/utils/: __init__.py  chatbot_test_data.py  metrics_collector.py
(+460 files in other folders)
